--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run prettier:solidity"
+      "pre-push": "yarn run prettier:solidity"
     }
   }
 }
